--- a/templates/app1/ques_view.html
+++ b/templates/app1/ques_view.html
@@ -37,7 +37,7 @@
                             </div>
                             <p class="card-text-author">Asked by <a
                                     href="{% url 'user_profile' ques.author %}">{{ ques.author }}</a></p>
-                        {% if user == ques.author_id  %}
+                        {% if user.id == ques.author_id  %}
                             <form action="{% url 'ques_delete' ques.id %}">
                                 <button id="delete" onclick="del_ques({{ ques.id }})" class="btn btn-danger">Delete
                                 </button>
@@ -89,14 +89,14 @@
                                                 </form>
                                             </div>
 
-                                            {% if user == ques.author_id or obj2.answered_by_id == user %}
+                                            {% if user.id == ques.author_id or obj2.answered_by_id == user.id %}
                                                 <div class="bg-margin-top-10">
                                                     <button type="button" class="btn btn-danger"
                                                             id="delete{{ obj2.id }}"
                                                             onclick="del_answer({{ obj2.id }})">
                                                         Delete
                                                     </button>
-                                                    {% if obj2.answered_by_id == user %}
+                                                    {% if obj2.answered_by_id == user.id %}
                                                         <button class="btn btn-info" id="edit{{ obj2.id }}"
                                                                 onclick="edit_answer({{ obj2.id }}, {{ obj2.id }})">
                                                             Edit
