--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -327,7 +327,7 @@
                 {% else %}
 
                     <div class="jumbotron gp-jumbotron">
-                        <h1>Sorry no stories Shared yet!</h1>
+                        <h1>Sorry no stories shared yet!</h1>
                     </div>
 
                 {% endif %}
